Update on Clustering

--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -7,10 +7,7 @@
       "collapsed_sections": [
         "WAK_qYgO_x6P",
         "BBvIRM3F_6pu",
-        "Cwzq5PyQANyv",
-        "8JDWRylSApki",
-        "tNlAEiaBBECS",
-        "E2n1iRNXCER-"
+        "Cwzq5PyQANyv"
       ]
     },
     "kernelspec": {
@@ -33,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "WCTZkUXwRax7"
       },
@@ -70,7 +67,7 @@
       "metadata": {
         "id": "lQMm9V7ZbvVJ"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,13 +86,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IcRqMmdSJHO2",
         "outputId": "11d54428-bd71-4c46-c63b-3f46b6d58878"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +537,7 @@
         "id": "M_ElplpoLahi",
         "outputId": "26ed4d62-063d-4a8c-f1c0-37ba6c91f92b"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,13 +597,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "zvLVOvGKMHiE",
         "outputId": "1e9668f5-d604-4756-ddea-afaeeb234398"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,13 +1140,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ug3MlvNlW5ND",
         "outputId": "d8ab8f7b-05cf-473d-f305-dd9b97d3cd76"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1239,7 +1233,7 @@
       "metadata": {
         "id": "XQ-_3idc2yrz"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1275,7 +1269,7 @@
       "metadata": {
         "id": "MvrUBZ8c4POS"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1300,13 +1294,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "iGHezkfPZRxs",
         "outputId": "9f45641a-014d-41ee-d579-c797c0b39f2e"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1341,13 +1334,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "UXpCksstbJHt",
         "outputId": "ff094802-a7a8-474a-8f0c-ea0c3d74c58d"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1383,7 +1375,7 @@
         "id": "pLLtnbbJ5Oi4",
         "outputId": "4b610a5e-2ef8-4f97-f593-34fff2222342"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1416,7 +1408,7 @@
       "metadata": {
         "id": "z3hf9KgsXU9M"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1440,7 +1432,7 @@
         "id": "vXq-8UfC5en6",
         "outputId": "a8e267bd-173a-482e-fd4d-ce8baba66934"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1469,7 +1461,7 @@
         "id": "OYyrldAcqOqo",
         "outputId": "c36ec698-39e7-4de9-b85b-15d6cb29c441"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2022,7 +2014,7 @@
         "id": "TaN06_vTtXrd",
         "outputId": "c54f9af6-b64f-401f-dff1-5f593290fbaa"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2101,7 +2093,7 @@
         "id": "DiCqKLnd6zPs",
         "outputId": "cb83263d-4e24-4692-b07b-074750ba9ab5"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2208,7 +2200,7 @@
         "id": "3S9CQIiE7tBB",
         "outputId": "7f63ce30-c4ec-4020-f9f1-2ebcbc739873"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2249,7 +2241,7 @@
         "id": "ARYNF2RW0SUF",
         "outputId": "0af3af81-f0eb-4089-a600-5c5a5b6c5ca8"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2279,7 +2271,7 @@
         "id": "qrUPLO6x0Zkg",
         "outputId": "a90b7ee4-61d2-4380-9bae-9bf44906dd6e"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2324,7 +2316,7 @@
         "id": "Fpa-qhhrsvs2",
         "outputId": "302b1dfb-c802-407c-b61e-3d7613d9c6cc"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2337,6 +2329,24 @@
           "execution_count": 108
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Preprocessing**: The data is scaled using a preprocessing technique to improve model performance.\n",
+        "Model Training: A GaussianMixture model is initialized with 10 components, set for 10 random initializations, and trained on the scaled dataset.\n",
+        "\n",
+        "**Clustering Predictions**: The GMM is used to predict cluster assignments for the dataset.\n",
+        "\n",
+        "**Performance Evaluation**:\n",
+        "\n",
+        "**Silhouette Score**: The clustering quality is evaluated using the silhouette score.\n",
+        "\n",
+        "**Log-Likelihood**: The score method computes the log-likelihood of the data given the fitted model."
+      ],
+      "metadata": {
+        "id": "j_HljQVH0mss"
+      }
     },
     {
       "cell_type": "code",
